# gentaskapi

./: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/core/: config.py
app/features/catalog/: __init__.py  router.py  schemas.py  service.py
app/features/ingest/: router.py  schemas.py  service.py
app/features/reports/: __init__.py  router.py  schemas.py  service.py
