[project]
name = "integration"
version = "0.1.0"
description = "Integration API"
authors = [
    {name = "OpenAI", email = "noreply@example.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "python-multipart (>=0.0.9,<1.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.isort]
profile = "black"
known_first_party = ["app"]
line_length = 88
skip = [".poetry"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=24.8.0,<25.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
